# HyperGuardV2

./: .gitignore  AGENTS.md  README.md  VBS_1.6.2_ANALYSIS.md  pyproject.toml  requirements.txt  run.ps1
.context/: CODING.md  LOGGING.md  STRUCTURE.md  TECHNOLOGIES.md
.github/: copilot-instructions.md
.github/instructions/: agent.instructions.md  git.instructions.md  python.script.instructions.md
.prompt/: PROMPT_TEMPLATE.md
src/: __main__.py  config.py  exceptions.py  gui.py
src/models/: __init__.py  feature.py  state.py
src/services/: __init__.py  bcd_ops.py  bitlocker_ops.py  efi_ops.py  preflight.py  registry_ops.py  service_ops.py  system_info.py  vbs_service.py
src/utils/: __init__.py  logging.py
tests/: conftest.py  test_bcd_ops.py  test_bitlocker_ops.py  test_efi_ops.py  test_gui.py  test_preflight.py  test_registry_ops.py  test_service_ops.py  test_state_models.py  test_system_info.py  test_vbs_service.py
